Fix nav bar spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -141,8 +141,8 @@ ul.topnav li a {
   // color: white;
   // text-align: center;
   // vertical-align: middle;
-  height: 33px;
-  min-width: 70pt;
+  height: 30px;
+  min-width: 50pt;
   // padding: 14px 16px;
   // text-decoration: none;
 }
@@ -270,7 +270,7 @@ ul.topnav li a {
   height: 75vh;
   margin-top: 2em;
   color: white;
-  padding: 2em;
+  padding: 1em;
   // font-family: 'terminal';
   // font: 1.3rem terminal, monospace;
   // font: 1.3rem Inconsolata, monospace;
